        a group counter. This fixes the remainder of #1624 thanks to
        Steve Lianoglou for reporting.
        
    o   unique.data.table and duplicated.data.table both now respect
        machine tolerance for double precision columns, implementing
        FR#1626 and fixing bug #1632. Thanks to questions by Iterator
        and comments by Allan Engelhardt on Stack Overflow.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.1   **
        **                                         **
        *********************************************

BUG FIXES

    o   .SD is now locked, partially fixing #1624. It was never
        the intention to allow assignment to .SD. Take a 'copy(.SD)'
        first if needed. Now documented in ?data.table and new FAQ 4.5
        including example. Thanks to Steve Lianoglou for reporting.

    o   := now works with a logical i subset; e.g.,
            DT[x==1,y:=x]
        Thanks to Muhammad Waliji for reporting.
        
USER VISIBLE CHANGES

    o   Error message "column <name> of i is not internally type integer"
        is now more helpful adding "i doesn't need to be keyed, just
        convert the (likely) character column to factor". Thanks to
        Christoph_J for his SO question.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.0   **
        **                                         **
        *********************************************

NEW FEATURES

    o   data.table() now accepts list columns directly rather than
        needing to add list columns to an existing data.table; e.g.,
        
            DT = data.table(x=1:3,y=list(4:6,3.14,matrix(1:12,3)))
            
        Thanks to Branson Owen for reminding. As before, list columns
        can be created via grouping; e.g.,
        